--- a/user-onboarding/src/App.css
+++ b/user-onboarding/src/App.css
@@ -40,9 +40,49 @@
 .inputs {
 display: flex;
 flex-direction: column;
+width: 500px;
+align-items: center;
 }
+
 header {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.error{
+  color: red;
+  font-size: 0.5em;
+}
+.onboarding{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 6px;
+  box-shadow: 0px 2px 6px 2px rgb(128, 127, 127);
+  margin: 16px 8px;
+  padding: 16px;
+  background-color: white;
+}
+
+.users{
+  border: 1px solid rgb(210, 210, 210);
+  border-radius: 6px;
+  box-shadow: 0px 2px 6px 2px rgb(128, 127, 127);
+  margin: 16px 8px;
+  padding: 16px;
+  background-color: white;
+}
+
+label {
+  display: flex;
+  margin-bottom: 16px;
+  justify-content: space-between;
+  width: 100%;
+}
+
+button{
+  display: flex;
   align-items: center;
 }
